Shy Look Today's page

--- a/abnoinfo/Blue Star.html
+++ b/abnoinfo/Blue Star.html
@@ -10,7 +10,7 @@
 
       <p>The Abnormality often invokes feelings of devotion and idolization in its targets, causing them to worship it. Worshippers of the {abnoName} express a desire to willingly throw themselves into the Abnormality's centre, claiming they must "return to that place" to cleanse themselves of their sins. {abnoName} is also capable of producing a low-pitched hum which encourages targets to respond to the 'call' and act as 'martyrs', being sucked into the Abnormality to be reborn as stars.</p>
     </section>
-    <br>
+
     <section>
       <h3 class="profile-header">Lobotomy Corporation</h3>
       <hr class="header-seperator">
@@ -136,13 +136,13 @@
               </div>
               <hr class="deck-separator">
             </div>
-            <div class="col-5 enemy-info">              
+            <div class="col-5 enemy-info">
               <div class="slideshow-container enemy-info-sprite-container">
                 <div class="slide slides1">
-                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Shrine Idle.png" data-lightbox="LoR1" data-title="Idle"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Shrine Idle.png"/></a>
+                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Shrine Idle.png" data-lightbox="LoR1" data-title="Idle"><img class="enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Shrine Idle.png"/></a>
                 </div>
                 <div class="slide notfirst slides1">
-                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Shrine Active.png" data-lightbox="LoR1" data-title="Active"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Shrine Active.png"/></a>
+                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Shrine Active.png" data-lightbox="LoR1" data-title="Active"><img class="enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Shrine Active.png"/></a>
                 </div>
                 <a class="prev" onclick="nextSlide(-1,1)">&#10094;</a>
                 <a class="next" onclick="nextSlide(1,1)">&#10095;</a>
@@ -248,28 +248,28 @@
               </div>
               <hr class="deck-separator">
             </div>
-            <div class="col-5 enemy-info">              
+            <div class="col-5 enemy-info">
               <div class="slideshow-container enemy-info-sprite-container">
                 <div class="slide slides2">
-                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Idle.png" data-lightbox="LoR2" data-title="Idle"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Idle.png"/></a>
+                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Idle.png" data-lightbox="LoR2" data-title="Idle"><img class="enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Idle.png"/></a>
                 </div>
                 <div class="slide notfirst slides2">
-                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Attack.png" data-lightbox="LoR2" data-title="Attacking"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Attack.png"/></a>
+                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Attack.png" data-lightbox="LoR2" data-title="Attacking"><img class="enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Attack.png"/></a>
                 </div>
                 <div class="slide notfirst slides2">
-                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Move.png" data-lightbox="LoR2" data-title="Moving"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Move.png"/></a>
+                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Move.png" data-lightbox="LoR2" data-title="Moving"><img class="enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Move.png"/></a>
                 </div>
                 <div class="slide notfirst slides2">
-                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Guard.png" data-lightbox="LoR2" data-title="Guarding"><img class="page-img  enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Guard.png"/></a>
+                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Guard.png" data-lightbox="LoR2" data-title="Guarding"><img class="enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Guard.png"/></a>
                 </div>
                 <div class="slide notfirst slides2">
-                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Hurt.png" data-lightbox="LoR2" data-title="Hurt"><img class="page-img  enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Hurt.png"/></a>
+                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Hurt.png" data-lightbox="LoR2" data-title="Hurt"><img class="enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Hurt.png"/></a>
                 </div>
                 <div class="slide notfirst slides2">
-                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Special.png" data-lightbox="LoR2" data-title="Special"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Special.png"/></a>
+                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Special.png" data-lightbox="LoR2" data-title="Special"><img class="enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Special.png"/></a>
                 </div>
                 <div class="slide notfirst slides2">
-                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Special Attack.png" data-lightbox="LoR2" data-title="Attacking (Special)"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Special Attack.png"/></a>
+                  <a class="display-img" href="../images/abnos/Blue Star/Worshipper/LoR Special Attack.png" data-lightbox="LoR2" data-title="Attacking (Special)"><img class="enemy-info-sprite slide" src="../images/abnos/Blue Star/Worshipper/LoR Special Attack.png"/></a>
                 </div>
                 <a class="prev" onclick="nextSlide(-1,2)">&#10094;</a>
                 <a class="next" onclick="nextSlide(1,2)">&#10095;</a>
