--- a/abnoinfo/Forsaken Murderer.html
+++ b/abnoinfo/Forsaken Murderer.html
@@ -8,7 +8,7 @@
 
       <p>When in an aggressive state, its head changes into a large blunt metal object which it uses as a hammer to crush opponents.</p>
     </section>
-    <br>
+
     <section>
       <h3 class="profile-header">Lobotomy Corporation</h3>
       <hr class="header-seperator">
@@ -92,11 +92,9 @@
 
       <p>{abnoName} appears as the first Abnormality on the {Floor of Technology}, unlocking {Awakening Metallic Ringing}, {Breakdown Chained Wrath}, and {Breakdown Violence} after its suppression.</p>
 
-      <p>In its book, {abnoName} is accompanied by two Last Match Flames which appear as burnt out matchsticks with stick-like arms and legs. The Last Match Flames are the main enemies during the battle, inflicting {LoR SE d Burn} as well as evading attacks to stall out turns while {abnoName} builds up {Light}.</p>
-      
-      <p>After {abnoName} fully builds up {Light}, it uses the skill '<span class="hardcover">Regret</span>', approaching the target and exploding causing an instant death in most cases. This attack deals no damage to {abnoName} and, in the event the battle continues, it returns to building up {Light}.</p>
+      <p>{abnoName} employs a simple strategy where it uses '<span class="hardcover">Chained Wrath</span>' for 2 turns, building up {Light}, so it can use '<span class="hardcover">Metallic Ringing</span>' and overpower its opponent. The Power of the dice on '<span class="hardcover">Metallic Ringing</span>' are fairly high for how early the Abnormality is encountered, and it is unlikely the target will be able to match them. Additionally, its passive 'Wrath' makes it easier for {abnoName} to Stagger its target, allowing it to use '<span class="hardcover">Metallic Ringing</span>' the very next turn as well.</p>
 
-      <p>Every time a Last Match Flame is deafeated, {abnoName} loses all it's {Light}, half its health and gets Staggered. Defeating both matches leads to the Abnormality's suppresion.</p>
+      <p>Inflicting any sort of status effect onto {abnoName} activates its passive 'Fear'. This causes the Power of all its dice to drastically drop, allowing the Librarian to easily deal with its '<span class="hardcover">Metallic Ringing</span>'. The activation of 'Fear' is marked by {abnoName} breathing heavily.</p>
 
       <h5 class="profile-subheader">Decks & Pages</h5>
 
@@ -140,22 +138,22 @@
               </div>
               <hr class="deck-separator">
             </div>
-            <div class="col-5 enemy-info">              
+            <div class="col-5 enemy-info">
               <div class="slideshow-container enemy-info-sprite-container">
                 <div class="slide slides1">
-                  <a class="display-img" href="../images/abnos/Forsaken Murderer/LoR Idle.png" data-lightbox="LoR1" data-title="Idle"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Forsaken Murderer/LoR Idle.png"/></a>
+                  <a class="display-img" href="../images/abnos/Forsaken Murderer/LoR Idle.png" data-lightbox="LoR1" data-title="Idle"><img class="enemy-info-sprite slide" src="../images/abnos/Forsaken Murderer/LoR Idle.png"/></a>
                 </div>
                 <div class="slide notfirst slides1">
-                  <a class="display-img" href="../images/abnos/Forsaken Murderer/LoR Attack.png" data-lightbox="LoR1" data-title="Attacking"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Forsaken Murderer/LoR Attack.png"/></a>
+                  <a class="display-img" href="../images/abnos/Forsaken Murderer/LoR Attack.png" data-lightbox="LoR1" data-title="Attacking"><img class="enemy-info-sprite slide" src="../images/abnos/Forsaken Murderer/LoR Attack.png"/></a>
                 </div>
                 <div class="slide notfirst slides1">
-                  <a class="display-img" href="../images/abnos/Forsaken Murderer/LoR Move.png" data-lightbox="LoR1" data-title="Moving"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Forsaken Murderer/LoR Move.png"/></a>
+                  <a class="display-img" href="../images/abnos/Forsaken Murderer/LoR Move.png" data-lightbox="LoR1" data-title="Moving"><img class="enemy-info-sprite slide" src="../images/abnos/Forsaken Murderer/LoR Move.png"/></a>
                 </div>
                 <div class="slide notfirst slides1">
-                  <a class="display-img" href="../images/abnos/Forsaken Murderer/LoR Guard.png" data-lightbox="LoR1" data-title="Guarding"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Forsaken Murderer/LoR Guard.png"/></a>
+                  <a class="display-img" href="../images/abnos/Forsaken Murderer/LoR Guard.png" data-lightbox="LoR1" data-title="Guarding"><img class="enemy-info-sprite slide" src="../images/abnos/Forsaken Murderer/LoR Guard.png"/></a>
                 </div>
                 <div class="slide notfirst slides1">
-                  <a class="display-img" href="../images/abnos/Forsaken Murderer/LoR Hurt.png" data-lightbox="LoR1" data-title="Hurt"><img class="page-img  enemy-info-sprite slide" src="../images/abnos/Forsaken Murderer/LoR Hurt.png"/></a>
+                  <a class="display-img" href="../images/abnos/Forsaken Murderer/LoR Hurt.png" data-lightbox="LoR1" data-title="Hurt"><img class="enemy-info-sprite slide" src="../images/abnos/Forsaken Murderer/LoR Hurt.png"/></a>
                 </div>
                 <a class="prev" onclick="nextSlide(-1,1)">&#10094;</a>
                 <a class="next" onclick="nextSlide(1,1)">&#10095;</a>
