--- a/abnoinfo/Porccubus.html
+++ b/abnoinfo/Porccubus.html
@@ -7,7 +7,7 @@
       <p><b>{abnoName}</b> is a plant-like creature with a thick serpentine body resembling a plant's stem. Several leaf-like spines are present on its body. The Abnormality possesses a red flower for a head, with a yellow centre resembling a nose, a pair of black eyes, and a pair of ear-like petals resembling those of a dog's.</p>
       <p>The tail is connected to a lightweight rubber ball covered in thorns. The thorns secrete a powder that induces pleasure into anyone that touches them. The pleasure received from the thorns is so great that it can cause the subject's blood to rush to their head, causing it to burst.</p>
     </section>
-    <br>
+
     <section>
       <h3 class="profile-header">Lobotomy Corporation</h3>
       <hr class="header-seperator">
@@ -185,25 +185,25 @@
               </div>
               <hr class="deck-separator">
             </div>
-            <div class="col-5 enemy-info">              
+            <div class="col-5 enemy-info">
               <div class="slideshow-container enemy-info-sprite-container">
                 <div class="slide slides0">
-                  <a class="display-img" href="../images/abnos/Porccubus/LoR Idle.png" data-lightbox="LoR1" data-title="Idle"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Porccubus/LoR Idle.png"/></a>
+                  <a class="display-img" href="../images/abnos/Porccubus/LoR Idle.png" data-lightbox="LoR1" data-title="Idle"><img class="enemy-info-sprite slide" src="../images/abnos/Porccubus/LoR Idle.png"/></a>
                 </div>
                 <div class="slide notfirst slides0">
-                  <a class="display-img" href="../images/abnos/Porccubus/LoR Blunt Attack.png" data-lightbox="LoR1" data-title="Attacking"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Porccubus/LoR Blunt Attack.png"/></a>
+                  <a class="display-img" href="../images/abnos/Porccubus/LoR Blunt Attack.png" data-lightbox="LoR1" data-title="Attacking"><img class="enemy-info-sprite slide" src="../images/abnos/Porccubus/LoR Blunt Attack.png"/></a>
                 </div>
                 <div class="slide notfirst slides0">
-                  <a class="display-img" href="../images/abnos/Porccubus/LoR Pierce Attack.png" data-lightbox="LoR1" data-title="Attacking"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Porccubus/LoR Pierce Attack.png"/></a>
+                  <a class="display-img" href="../images/abnos/Porccubus/LoR Pierce Attack.png" data-lightbox="LoR1" data-title="Attacking"><img class="enemy-info-sprite slide" src="../images/abnos/Porccubus/LoR Pierce Attack.png"/></a>
                 </div>
                 <div class="slide notfirst slides0">
-                  <a class="display-img" href="../images/abnos/Porccubus/LoR Move.png" data-lightbox="LoR1" data-title="Moving"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Porccubus/LoR Move.png"/></a>
+                  <a class="display-img" href="../images/abnos/Porccubus/LoR Move.png" data-lightbox="LoR1" data-title="Moving"><img class="enemy-info-sprite slide" src="../images/abnos/Porccubus/LoR Move.png"/></a>
                 </div>
                 <div class="slide notfirst slides0">
-                  <a class="display-img" href="../images/abnos/Porccubus/LoR Evade.png" data-lightbox="LoR1" data-title="Evading"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Porccubus/LoR Evade.png"/></a>
+                  <a class="display-img" href="../images/abnos/Porccubus/LoR Evade.png" data-lightbox="LoR1" data-title="Evading"><img class="enemy-info-sprite slide" src="../images/abnos/Porccubus/LoR Evade.png"/></a>
                 </div>
                 <div class="slide notfirst slides0">
-                  <a class="display-img" href="../images/abnos/Porccubus/LoR Hurt.png" data-lightbox="LoR1" data-title="Hurt"><img class="page-img  enemy-info-sprite slide" src="../images/abnos/Porccubus/LoR Hurt.png"/></a>
+                  <a class="display-img" href="../images/abnos/Porccubus/LoR Hurt.png" data-lightbox="LoR1" data-title="Hurt"><img class="enemy-info-sprite slide" src="../images/abnos/Porccubus/LoR Hurt.png"/></a>
                 </div>
                 <a class="prev" onclick="nextSlide(-1,0)">&#10094;</a>
                 <a class="next" onclick="nextSlide(1,0)">&#10095;</a>
@@ -266,7 +266,7 @@
               <td>
                 <ul class="abno-page-quote-list">
                   <li>You’ll fall ill if you hold in your laughter. Why don’t you laugh to your heart’s content?</li>
-                  <li>Laughter makes you happy. Blessings will come your way, you know?</li>                  
+                  <li>Laughter makes you happy. Blessings will come your way, you know?</li>
                   <li>Come on, let’s laugh together. Turn your mouth all the way up.</li>
                 </ul>
               </td>
