--- a/abnoinfo/Scorched Girl.html
+++ b/abnoinfo/Scorched Girl.html
@@ -10,7 +10,7 @@
       
       <p>{abnoName} is capable of self-destructing. It typically picks a target and heads toward them, ignoring any one else in its path. It is usually heard sobbing during this process. Once it reaches its target, it explodes in a fiery blast killing the target as well as anyone else in the vicinity.</p>
     </section>
-    <br>
+
     <section>
       <h3 class="profile-header">Lobotomy Corporation</h3>
       <hr class="header-seperator">
@@ -106,7 +106,7 @@
       
       <p>After {abnoName} fully builds up {Light}, it uses the skill '<span class="hardcover">Fourth Match Flame</span>', approaching the target and exploding causing an instant death in most cases. This attack deals no damage to {abnoName} and, in the event the battle continues, it returns to building up {Light}.</p>
 
-      <p>Every time a Last Match Flame is deafeated, {abnoName} loses all it's {Light}, half its health and gets Staggered. Defeating both matches leads to the Abnormality's suppresion.</p>
+      <p>Every time a Last Match Flame is deafeated, {abnoName} loses all of its {Light}, half its health and gets Staggered. Defeating both matches leads to the Abnormality's suppresion.</p>
 
       <h5 class="profile-subheader">Decks & Pages</h5>
 
@@ -131,19 +131,19 @@
               </div>
               <hr class="deck-separator">
             </div>
-            <div class="col-5 enemy-info">              
+            <div class="col-5 enemy-info">
               <div class="slideshow-container enemy-info-sprite-container">
                 <div class="slide slides1">
-                  <a class="display-img" href="../images/abnos/Scorched Girl/LoR Idle.png" data-lightbox="LoR1" data-title="Idle"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Scorched Girl/LoR Idle.png"/></a>
+                  <a class="display-img" href="../images/abnos/Scorched Girl/LoR Idle.png" data-lightbox="LoR1" data-title="Idle"><img class="enemy-info-sprite slide" src="../images/abnos/Scorched Girl/LoR Idle.png"/></a>
                 </div>
                 <div class="slide notfirst slides1">
-                  <a class="display-img" href="../images/abnos/Scorched Girl/LoR Move.png" data-lightbox="LoR1" data-title="Moving"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Scorched Girl/LoR Move.png"/></a>
+                  <a class="display-img" href="../images/abnos/Scorched Girl/LoR Move.png" data-lightbox="LoR1" data-title="Moving"><img class="enemy-info-sprite slide" src="../images/abnos/Scorched Girl/LoR Move.png"/></a>
                 </div>
                 <div class="slide notfirst slides1">
-                  <a class="display-img" href="../images/abnos/Scorched Girl/LoR Defense.png" data-lightbox="LoR1" data-title="Defense"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Scorched Girl/LoR Defense.png"/></a>
+                  <a class="display-img" href="../images/abnos/Scorched Girl/LoR Defense.png" data-lightbox="LoR1" data-title="Defense"><img class="enemy-info-sprite slide" src="../images/abnos/Scorched Girl/LoR Defense.png"/></a>
                 </div>
                 <div class="slide notfirst slides1">
-                  <a class="display-img" href="../images/abnos/Scorched Girl/LoR Hurt.png" data-lightbox="LoR1" data-title="Hurt"><img class="page-img  enemy-info-sprite slide" src="../images/abnos/Scorched Girl/LoR Hurt.png"/></a>
+                  <a class="display-img" href="../images/abnos/Scorched Girl/LoR Hurt.png" data-lightbox="LoR1" data-title="Hurt"><img class="enemy-info-sprite slide" src="../images/abnos/Scorched Girl/LoR Hurt.png"/></a>
                 </div>
                 <a class="prev" onclick="nextSlide(-1,1)">&#10094;</a>
                 <a class="next" onclick="nextSlide(1,1)">&#10095;</a>
@@ -197,22 +197,22 @@
               </div>
               <hr class="deck-separator">
             </div>
-            <div class="col-5 enemy-info">              
+            <div class="col-5 enemy-info">
               <div class="slideshow-container enemy-info-sprite-container">
                 <div class="slide slides2">
-                  <a class="display-img" href="../images/abnos/Scorched Girl/Match Flame/LoR Idle.png" data-lightbox="LoR2" data-title="Idle"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Scorched Girl/Match Flame/LoR Idle.png"/></a>
+                  <a class="display-img" href="../images/abnos/Scorched Girl/Match Flame/LoR Idle.png" data-lightbox="LoR2" data-title="Idle"><img class="enemy-info-sprite slide" src="../images/abnos/Scorched Girl/Match Flame/LoR Idle.png"/></a>
                 </div>
                 <div class="slide notfirst slides2">
-                  <a class="display-img" href="../images/abnos/Scorched Girl/Match Flame/LoR Attack.png" data-lightbox="LoR2" data-title="Attacking"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Scorched Girl/Match Flame/LoR Attack.png"/></a>
+                  <a class="display-img" href="../images/abnos/Scorched Girl/Match Flame/LoR Attack.png" data-lightbox="LoR2" data-title="Attacking"><img class="enemy-info-sprite slide" src="../images/abnos/Scorched Girl/Match Flame/LoR Attack.png"/></a>
                 </div>
                 <div class="slide notfirst slides2">
-                  <a class="display-img" href="../images/abnos/Scorched Girl/Match Flame/LoR Move.png" data-lightbox="LoR2" data-title="Moving"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Scorched Girl/Match Flame/LoR Move.png"/></a>
+                  <a class="display-img" href="../images/abnos/Scorched Girl/Match Flame/LoR Move.png" data-lightbox="LoR2" data-title="Moving"><img class="enemy-info-sprite slide" src="../images/abnos/Scorched Girl/Match Flame/LoR Move.png"/></a>
                 </div>
                 <div class="slide notfirst slides2">
-                  <a class="display-img" href="../images/abnos/Scorched Girl/Match Flame/LoR Evade.png" data-lightbox="LoR2" data-title="Evading"><img class="page-img enemy-info-sprite slide" src="../images/abnos/Scorched Girl/Match Flame/LoR Evade.png"/></a>
+                  <a class="display-img" href="../images/abnos/Scorched Girl/Match Flame/LoR Evade.png" data-lightbox="LoR2" data-title="Evading"><img class="enemy-info-sprite slide" src="../images/abnos/Scorched Girl/Match Flame/LoR Evade.png"/></a>
                 </div>
                 <div class="slide notfirst slides2">
-                  <a class="display-img" href="../images/abnos/Scorched Girl/Match Flame/LoR Hurt.png" data-lightbox="LoR2" data-title="Hurt"><img class="page-img  enemy-info-sprite slide" src="../images/abnos/Scorched Girl/Match Flame/LoR Hurt.png"/></a>
+                  <a class="display-img" href="../images/abnos/Scorched Girl/Match Flame/LoR Hurt.png" data-lightbox="LoR2" data-title="Hurt"><img class="enemy-info-sprite slide" src="../images/abnos/Scorched Girl/Match Flame/LoR Hurt.png"/></a>
                 </div>
                 <a class="prev" onclick="nextSlide(-1,2)">&#10094;</a>
                 <a class="next" onclick="nextSlide(1,2)">&#10095;</a>
