--- a/abnoinfo/Blue Star.html
+++ b/abnoinfo/Blue Star.html
@@ -21,8 +21,10 @@
       </div>
       
       <p>In containment, {abnoName} deals 6-9 {WHITE} damage and produces a maximum of 33 {E-Boxes}.<br>Its responses to the four work orders are as follows:<br>{Insight} (Common) > {Repression} (Common) > {Instinct} (Low) > {Attachment} (Very Low).</p>
+
+      <p>If an employee with low {Temperance} enters its containment unit, or when an employee spends too much time in the containment unit for a work order, they will get on their knees to worship {abnoName} as it sucks them inside.</p>
       
-      <p>Its Qliphoth Counter starts at 2.<br>Upon reaching 0, {abnoName} breaches containment, teleporting into the main room of a random department. After teleporting, it remains stationary floating in the air. It occasionally lets out bursts of {WHITE} damage that affect every employee in the facility. Any employee that falls into a panic from its attacks becomes a worshipper and immediately gets sucked into its centre, dying.</p>
+      <p>Its Qliphoth Counter starts at 2.<br>Upon reaching 0, {abnoName} breaches containment, teleporting into the main room of a random department. After teleporting, it remains stationary floating in the air, immediately sucking in employees with low {Temperance} or {Prudence}. It occasionally lets out bursts of {WHITE} damage that affect every employee in the facility. Any employee that falls into a panic from its attacks becomes a worshipper and immediately gets sucked into its centre, dying.</p>
 
       <h5 class="profile-subheader">Managerial Guidelines</h5>
       <ul>
