--- a/abnoinfo/Porccubus.html
+++ b/abnoinfo/Porccubus.html
@@ -18,6 +18,8 @@
       </div>
       
       <p>In containment, {abnoName} deals 1-5 {BLACK} damage and produces a maximum of 18 {E-Boxes}.<br>Its responses to the four work orders are as follows:<br>{Instinct} (High) > {Attachment} (Common) > {Insight} (Common) > {Repression} (Low).</p>
+
+      <p>Employees with low {Temperance} are susceptible to being instantly killed by {abnoName} if they produce a {Good} work result, being easy prey to the Abnormality's pleasure-inducing thorns.</p>
       
       <p>Its Qliphoth Counter starts at 2.<br>Upon reaching 0, {abnoName} breaches containment. It will teleport to a random corridor in the facility where it will remain in a fixed position. {abnoName} is immune to ranged attacks, meaning employees have to be within its attacking range to deal damage to it. {abnoName} deals {WHITE} damage with its attacks, dealing increased damage to employees with low {Temperance}. When an employee panics due to the Abnormality's attacks, they will begin laughing until their head bursts from the pleasure.</p>
 
