--- a/abnoinfo/Scorched Girl.html
+++ b/abnoinfo/Scorched Girl.html
@@ -191,7 +191,7 @@
                   <div class="lor-page-text">
                     <span class="lor-keyword">On Use</span> Lose 5 HP<br>
                     {Evade Dice} {defroll 1 8}<br>
-                    {Pierce Dice} {dmgroll 3 3} <span class="lor-keyword">On Hit</span> <span class="lor-offtext">Inflict 3 {LoR SE d Burn}</span><br>
+                    {Pierce Dice} {dmgroll 3 3} <span class="lor-keyword">On Hit</span> <span class="lor-offtext">Inflict 3 {LoR SE d Burn}</span>
                   </div>
                 </div>
               </div>
