Happy Teddy Bear's page

--- a/abnoinfo/Porccubus.html
+++ b/abnoinfo/Porccubus.html
@@ -260,7 +260,7 @@
             <tr class="breakdown-bg">
               <td class="abno-page-img">
                 <div class="lor-page-img-container">
-                  <a class="display-img" href="../images/abnos/Porccubus/LoR Matchlight.png" data-lightbox="abnopages" data-title="Laughing Powder"><img class="lor-page-img" src="../images/abnos/Porccubus/LoR Laughing Powder.png"/></a><br>
+                  <a class="display-img" href="../images/abnos/Porccubus/LoR Laughing Powder.png" data-lightbox="abnopages" data-title="Laughing Powder"><img class="lor-page-img" src="../images/abnos/Porccubus/LoR Laughing Powder.png"/></a><br>
                   <span class="abno-page-name">Laughing Powder</span>
                 </div>
               </td>
