Spider Bud's page

--- a/abnoinfo/Blue Star.html
+++ b/abnoinfo/Blue Star.html
@@ -15,7 +15,7 @@
       <h3 class="profile-header">Lobotomy Corporation</h3>
       <hr class="header-seperator">
 
-      <div class=" page-img-container">
+      <div class="page-img-container">
         <a class="display-img" href="../images/abnos/Blue Star/LC Idle.png" data-lightbox="LC" data-title="{abnoName}"><img class="page-img" src="../images/abnos/Blue Star/LC Idle.png"/></a>
         <div class="caption">{abnoName} in<br>Lobotomy Corporation</div>
       </div>
@@ -107,7 +107,7 @@
 
       <p>In its book, {abnoName} does not directly participate in combat. It instead remains in the background, while the Shrine to the {abnoName} acts as its surrogate in the fight, though it cannot be attacked either. The main enemies in the encounter are the Worshippers of the {abnoName}. Four Worshippers participate in the fight, though every time one dies, they are replaced by a new Worshipper at the start of the next turn.</p>
       
-      <p>Every character that becomes Staggered is sucked into the {abnoName} and die. The Abnormality is suppressed once 10 characters are killed in this fashion, regardless of whether they are a Librarian or a Worshipper.</p>
+      <p>Every character that becomes Staggered is sucked into the {abnoName} and dies. The Abnormality is suppressed once 10 characters are killed in this fashion, regardless of whether they are a Librarian or a Worshipper.</p>
 
       <p>The Worshippers' attacks focus on inflicting Stagger damage to opponents, while recovering their own Stagger Resist. If a Woshipper has a low amount of Stagger Resist, they perform a kamikaze attack, throwing themself into the {abnoName} while changing the target's Stagger resistances to "Fatal". This death does not count towards the required 10.</p>
 
@@ -213,7 +213,7 @@
                   <div class="lor-page-text">
                     {Blunt Dice} {dmgroll 7 9}<br>
                     {Block Dice} {defroll 3 6}<br>
-                    {Counter Block Dice} {ctrroll 3 6} <span class="lor-keyword">On Clash Win</span> <span class="lor-deftext">Recover 5 Stagger Resist</span><br>
+                    {Counter Block Dice} {ctrroll 3 6} <span class="lor-keyword">On Clash Win</span> <span class="lor-deftext">Recover 5 Stagger Resist</span>
                   </div>
                 </div>
               </div>
