Little Helper's page

--- a/abnoinfo/Porccubus.html
+++ b/abnoinfo/Porccubus.html
@@ -284,7 +284,7 @@
         <li class="red-text">"Don’t you want to feel the dazzling and vibrant display of colors?"</li>
         <li class="red-text">"You can’t touch me if you’re so far away. Come closer."</li>
         <li class="red-text">"Your head will soon be filled with happiness."</li>
-        <span class="quote-cond">When a target has three copies of 'Pleasure':</span>
+        <span class="quote-cond">When a target has 'Pleasure':</span>
         <li class="red-text">"Just a little taste of heaven won’t hurt, right?"</li>
         <li class="red-text">"I pity those fools who don’t know this happiness."</li>
         <li class="red-text">"Once you’ve had a taste of this sweetness, you won’t be able to quit."</li>
