Child of the Galaxy's page

--- a/abnoinfo/Blue Star.html
+++ b/abnoinfo/Blue Star.html
@@ -244,7 +244,7 @@
                     <span class="lor-page-stats">{Melee} | 0 {Light}</span>
                   </div>
                   <div class="lor-page-text">
-                    {Pierce Dice} {dmgroll 12 12} <span class="lor-keyword">On Hit</span> <span class="lor-offtext">This character dies. Change target's Stagger resistances to "Fatal" for the next Scene</span><br>
+                    {Pierce Dice} {dmgroll 12 12} <span class="lor-keyword">On Hit</span> <span class="lor-offtext">This character dies. Change target's Stagger resistances to "Fatal" for the next Scene</span>
                   </div>
                 </div>
               </div>
