--- a/abnoinfo/Little Helper.html
+++ b/abnoinfo/Little Helper.html
@@ -115,7 +115,7 @@
 
       <p>{abnoName} appears as the second Abnormality on the {Floor of Technology}, unlocking {Awakening Recharge}, {Awakening Repetitive Pattern-Recognition}, and {Awakening Clean} after its suppression.</p>
 
-      <p>In its book, there are three {abnoName}s present. Its strategy involves using '<span class="hardcover">Charge</span>' to gain 4 {LoR SE b Strength} to boost the power of '<span class="hardcover">Clean</span>'.</p>
+      <p>In its book, there are three {abnoName}s present, all of which are in cleaning mode. Its strategy involves using '<span class="hardcover">Charge</span>' to gain 4 {LoR SE b Strength} to boost the power of '<span class="hardcover">Clean</span>'.</p>
       
       <p>With the additional power, '<span class="hardcover">Clean</span>' becomes able to deal 10 damage to the opponent. This activates its passive 'Repetitive Pattern-Recognition' which generates extra {Light}, enabling it to use '<span class="hardcover">Clean</span>' the following turn as well.</p>
 
