--- a/abnoinfo/Scorched Girl.html
+++ b/abnoinfo/Scorched Girl.html
@@ -265,7 +265,7 @@
                   <span class="abno-page-name">Matchlight</span>
                 </div>
               </td>
-              <td>[Single Ally]<br>The first two Combat Pages the librarian uses after this Abnormality page is selected gain the ‘Matchlight’ status (Excludes [On Play] pages). Whenever the librarian uses a page with ‘Matchlight’, gain 1 {LoR SE r Ember}.<br>Pages with ‘Matchlight’ become stronger based on the amount of {LoR SE r Ember}; however, they have a 25% chance to damage the user if {LoR SE r Ember} is at 4 or higher.<br><span class="abno-page-quote">“She's like a ticking time bomb. It's impossible to tell if she's in a good mood or not.”</span></td>
+              <td>[Single Ally]<br>The first two Combat Pages the librarian uses after this Abnormality page is selected gain the ‘Matchlight’ status. Whenever the librarian uses a page with ‘Matchlight’, gain 1 {LoR SE r Ember}.<br>Pages with ‘Matchlight’ become stronger based on the amount of {LoR SE r Ember}; however, they have a 25% chance to damage the user if {LoR SE r Ember} is at 4 or higher.<br><span class="abno-page-quote">“She's like a ticking time bomb. It's impossible to tell if she's in a good mood or not.”</span></td>
               <td>
                 <ul class="abno-page-quote-list">
                   <li>I can feel happiness through the candlelight. And warmth…</li>
