--- a/abnoinfo/Shy Look Today.html
+++ b/abnoinfo/Shy Look Today.html
@@ -40,7 +40,7 @@
         <a class="next" onclick="nextSlide(1,0)">&#10095;</a>
       </div>
       
-      <p>In containment, {abnoName} deals 2-3 {BLACK} damage and produces a maximum of 12 {E-Boxes}.<br>It responds to all four work orders eqaully:<br>{Instinct} (Common) = {Insight} (Common) = {Attachment} (Common) = {Repression} (Common).<br>It perfers work performed by lower level agents.</p>
+      <p>In containment, {abnoName} deals 2-3 {BLACK} damage and produces a maximum of 12 {E-Boxes}.<br>It responds to all four work orders equally:<br>{Instinct} (Common) = {Insight} (Common) = {Attachment} (Common) = {Repression} (Common).<br>It perfers work performed by lower level agents.</p>
 
       <p>When no employee is performing work on it, {abnoName} will continuously shift between its different faces at random. Once an employee enters the containment unit, Shy Look will stop at whatever face it was behind when they entered, and only resume changing once the work is complete and the employee leaves. While Shy Look shows no preference in Work Orders, the actual work success rate depends on which facial expression it has during the work. The success rate for its faces are as follows:<br>Happy (Very High) > Smiling (High) > Neutral (Common) > Sad (Low) > Angry (Very Low)</p>
 
